--- a/intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
+++ b/intl.zh-CN/用户指南/日志分析/查询实时日志分析/查询日志.md
@@ -6,26 +6,27 @@
 
 ## 操作步骤 {#section_cpw_qq3_kfb .section}
 
-1.  登录态势感知控制台。
+1.  登录[态势感知管理控制台](https://yundunnext.console.aliyun.com/?p=sasnext#/logAnalyze/ap-southeast-3)。
 2.  在左侧导航栏中选择**日志分析** 。
-3.  在日志分析页面选择您需要查看的日志类型，并将状态设置为**开启**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/153918808313441_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737891_zh-CN.png)
 
-4.  单击**日志分析**打开日志服务查询页面，页面将展示您选择的日志类型的查询页面。
+3.  在日志分析页面选择您需要查看的日志类型，并将状态设置为**启用**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/153918808313454_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737893_zh-CN.png)
 
-    系统会为您自动匹配查询语句。
+    您还可以在**日志分析**页面进行以下操作：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/153918808313455_zh-CN.png)
+    -   单击**日志分析**打开日志服务查询和分析页面，页面将展示您选择的日志类型的查询和分析页面，并且系统会为您自动匹配查询语句。
 
-5.  单击**搜索**按钮上方的时间设置下拉框选择日志时间范围。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105737898_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/153918808313443_zh-CN.png)
+    -   单击**搜索**按钮上方的时间设置下拉框选择日志时间范围，然后单击**搜索**按钮查看您所选时间范围内的日志信息。
 
-6.  单击搜索栏右侧的**搜索**按钮查看您所选时间范围内的日志信息。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22729/154821105837899_zh-CN.png)
 
-    **说明：** 您的态势感知日志保存时间为180天，每条日志会在其日志时间的第180天被删除。
+        **说明：** 态势感知日志可保存180天，每条日志会在其日志时间的第180天被删除。
+
+        **说明：** 态势感知支持对7天内的日志进行查询和分析。如需搜索或分析超过7天的日志数据，请提交工单了解详情。
 
 
