--- a/cn.zh-CN/用户指南/可视化大屏（新版）.md
+++ b/cn.zh-CN/用户指南/可视化大屏（新版）.md
@@ -4,7 +4,7 @@
 
 新版可视化大屏将安全攻防数据转化并呈现到可视化大屏上，秒级更新实时数据。可实时展现资产、漏洞、基线情况，帮助您一眼看清资产当前的安全状态；实时展现攻击来源、攻击分布、明确攻击者来源及攻击情况，帮助您建立安全防线，提升资产的整体防御能力；实时为您呈现告警概览并及时响应，帮助您构建实时威胁感知能力，将入侵损失降低到最小。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837728_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821505937728_zh-CN.png)
 
 **说明：** 原有的旧版大屏功能即将下线。如果给您带来不便，敬请谅解。
 
@@ -12,7 +12,7 @@
 
 态势感知可视化大屏正中间位置以动态方式展示了攻击地域地图，显示态势感知检测到您资产受到的攻击来源方向、攻击来源地区、攻击来源IP地址和攻击次数等信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837568_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037568_zh-CN.png)
 
 -   **实时安全态势**上方的数字表示您资产的安全分数。详细信息参见[态势感知首页](cn.zh-CN/用户指南/总览.md#)。
 -   攻击地域地图中的橙色球体表示攻击来源地区。
@@ -23,7 +23,7 @@
 
 **资产**组件展示了态势感知检测到的资产统计信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837561_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037561_zh-CN.png)
 
 **资产**组件包含以下信息：
 
@@ -37,21 +37,21 @@
 
 **漏洞**组件展示了您资产中漏洞的总数量、不同危险等级漏洞的环形占比图、需处理的漏洞类型和对应的数量、最近7天不同风险等级的漏洞的数据统计柱状图。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837560_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037560_zh-CN.png)
 
 **漏洞**组件包含以下信息：
 
 -   **总量**：您资产中漏洞的总数量。
 -   **需紧急修复**：你资产中需立即修复的漏洞数量。状态符号为红色。
 -   **可延后修复**：您资产中可稍后再进行修复的漏洞总数量。状态符号为橙色。
--   **暂不可修复**：您资产中暂时无法进行修复的漏洞数量。状态符号为灰色。
+-   **暂可不修复**：您资产中暂时无法进行修复的漏洞数量。状态符号为灰色。
 -   最近7天不同风险等级的漏洞的数据统计柱状图。
 
 ## 基线 {#section_j13_fwh_mgb .section}
 
 **基线**组件展示了您资产中基线检查风险项的总数量、不同等级的基线风险项及其对应的数量、最近7天不同风险等级的基线风险项的数据统计柱状图。当天统计数据为准实时数据。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837562_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037562_zh-CN.png)
 
 **基线**组件包含以下信息：
 
@@ -65,31 +65,31 @@
 
 **安全态势**组件展示了最近15天安全分的趋势图。当天统计数据为准实时数据。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837563_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037563_zh-CN.png)
 
 ## 安全运营 {#section_pgr_fwh_mgb .section}
 
 **安全运营**组件展示了最近7天内已处理的告警（红色状态符号表示）、已处理漏洞（紫色状态符号表示）和已处理的基线风险（蓝色状态符号表示）数量柱状图。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837564_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037564_zh-CN.png)
 
 ## 告警 {#section_igv_fwh_mgb .section}
 
 **告警**组件展示了最近7天内未处理的、排名前5的高风险告警列表，包括告警事件发生的时间、事件名称和主机名称。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837565_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037565_zh-CN.png)
 
 ## 攻击来源Top 5 {#section_sjw_fwh_mgb .section}
 
 **攻击来源Top 5**组件展示您主机受到的攻击次数排名前5的攻击来源IP地址及其发起的攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837566_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037566_zh-CN.png)
 
 ## 攻击类型 {#section_vzx_fwh_mgb .section}
 
 **攻击类型**组件展示您主机受到的攻击类型和对应的被攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116837567_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037567_zh-CN.png)
 
 ## 开通和访问新版可视化大屏 {#section_kb5_p1g_ngb .section}
 
@@ -98,23 +98,23 @@
 1.  登录[阿里云态势感知控制台](https://yundun.console.aliyun.com/?p=sas)单击**可视化态势**进入**可视化态势**页面。
 2.  单击**立即购买**进入态势感知购买页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116937700_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037700_zh-CN.png)
 
 3.  在购买页面中**安全大屏**模块选择**是**并选择您需要的**购买时长**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116937703_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037703_zh-CN.png)
 
     **说明：** 态势感知可视化大屏为企业版增值服务，您可在购买页面选择安全大屏后查看大屏的实际价格。
 
 4.  确认配置后单击**立即购买**并完成支付。
 5.  返回控制台页面并访问大屏页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116937707_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506037707_zh-CN.png)
 
     -   您可在**安全态势大屏**模块单击**直接访问**进入大屏页面。
     -   单击**免登配置**可创建大屏免登地址，方便您在不登录态势感知控制台的情况下直接通过免登链接打开大屏页面。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154804116937715_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/105891/154821506137715_zh-CN.png)
 
         **说明：** 使用免登地址访问大屏前仍需先登录您的阿里云账号。
 
