--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -9,7 +9,7 @@
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
--   [安装Agent提示“Permission denied”错误](intl.zh-CN/常见问题/Agent相关FAQ.md#1)
+-   [安装Agent提示“Permission denied”错误](intl.zh-CN/常见问题/常见问题隐藏目录/Agent相关FAQ.md#1)
 -   [金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云、VPC用户安装Agent.md#)
 -   [如何在非阿里云服务器上使用云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在非阿里云服务器上使用云安全中心？.md#)
 -   [如何在镜像中安装云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在镜像中安装云安全中心？.md#)
@@ -19,10 +19,16 @@
 -   [ECS Linux 系统 CPU 异常占用：minerd 、tplink 等挖矿进程](https://www.alibabacloud.com/help/zh/faq-detail/41206.html?spm=a2c5t.10695662.1996646101.searchclickresult.760b4552WFMhAQ)
 -   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
 -   [云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../intl.zh-CN/常见问题/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
+-   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
 
-## 安全告警防御相关问题 {#section_q25_5b6_xyk .section}
+## 安全告警相关问题 {#section_q25_5b6_xyk .section}
 
 -   [如何查看我已开启了哪些防御能力？](intl.zh-CN/常见问题/常见问题隐藏目录/如何查看我已开启了哪些防御能力？.md#)
+-   [隔离操作适用于哪些安全告警类型？](intl.zh-CN/常见问题/常见问题隐藏目录/隔离操作适用于哪些安全告警类型？.md#)
+-   [如何正确处理告警误报？](intl.zh-CN/常见问题/常见问题隐藏目录/如何正确处理告警误报？.md#)
+-   [基础版用户收到通知提示发现网站后门等威胁该怎么办？](intl.zh-CN/常见问题/常见问题隐藏目录/基础版用户收到通知提示发现网站后门等威胁该怎么办？.md#)
+-   [如何在云安全中心找到网站后门检测的功能？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在云安全中心找到网站后门检测的功能？.md#)
+-   [哪些类型的异常支持自动查杀而无需手动处理？](intl.zh-CN/常见问题/常见问题隐藏目录/哪些类型的异常支持自动查杀而无需手动处理？.md#)
 
 ## 异常登录相关问题 {#section_dpg_5gj_ygx .section}
 
@@ -33,20 +39,20 @@
 
 ## 网页被篡改相关问题 {#section_dkd_8di_jje .section}
 
--   [短信或邮件报网站后门](intl.zh-CN/常见问题/短信或邮件报网站后门.md#)
+-   [短信或邮件报网站后门](intl.zh-CN/常见问题/常见问题隐藏目录/短信或邮件报网站后门.md#)
 
 ## 漏洞相关问题 {#section_dgw_5fy_jp3 .section}
 
--   [漏洞修复失败的可能原因](intl.zh-CN/常见问题/漏洞修复失败的可能原因.md#)
+-   [漏洞修复失败的可能原因](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复失败的可能原因.md#)
 -   [Linux软件漏洞FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/Linux软件漏洞FAQ.md#)
 -   [系统漏洞修复FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/系统漏洞修复FAQ.md#)
 -   [Linux软件漏洞各参数说明](intl.zh-CN/常见问题/常见问题隐藏目录/Linux软件漏洞各参数说明.md#)
 -   [Linux软件漏洞修复命令为空](intl.zh-CN/常见问题/常见问题隐藏目录/Linux软件漏洞修复命令为空.md#)
--   [如何手动检测系统软件漏洞？](intl.zh-CN/常见问题/如何手动检测系统软件漏洞？.md#)
--   [漏洞修复后手动验证没有反应](intl.zh-CN/常见问题/漏洞修复后手动验证没有反应.md#)
+-   [如何手动检测系统软件漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/如何手动检测系统软件漏洞？.md#)
+-   [漏洞修复后手动验证没有反应](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复后手动验证没有反应.md#)
 -   [排查云安全中心无法验证系统漏洞修复的问题](intl.zh-CN/常见问题/常见问题隐藏目录/排查云安全中心无法验证系统漏洞修复的问题.md#)
 -   [漏洞修复优先级排序参考](../../../../intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复优先级排序参考.md#)
--   [软件漏洞功能收费说明](intl.zh-CN/常见问题/软件漏洞功能收费说明.md#)
+-   [软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
 -   [漏洞扫描周期说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描周期说明.md#)
 -   [服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/服务器软件漏洞修复最佳实践.md#)
 
@@ -55,17 +61,18 @@
 -   [基线检查风险项修复建议](intl.zh-CN/常见问题/常见问题隐藏目录/基线检查风险项修复建议.md#)
 -   [基线检查验证失败如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/基线检查验证失败如何处理？.md#)
 
-## 日志问相关题 {#section_fmb_l6r_1pm .section}
+## 日志相关问题 {#section_fmb_l6r_1pm .section}
 
 -   [查看云安全中心Aegis的日志](intl.zh-CN/常见问题/常见问题隐藏目录/查看云安全中心Aegis的日志.md#)
 
-## 服务器相关问题 {#section_dsh_z6a_c2z .section}
+## 购买、续费相关问题 {#section_cu7_ry9_rwr .section}
 
--   [在ECS中对云安全中心服务端地址进行加白](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS中对云安全中心服务端地址进行加白.md#)
--   [云服务器 ECS 中病毒或被木马入侵了怎么办](../../../../intl.zh-CN/常见问题/操作运维 Windows/病毒安全/云服务器 ECS 中病毒或被木马入侵了怎么办.md#)
+-   [如何降低产品配置？](intl.zh-CN/常见问题/常见问题隐藏目录/如何降低产品配置？.md#)
+-   [联通沃云购买企业版失败](intl.zh-CN/常见问题/常见问题隐藏目录/联通沃云购买企业版失败.md#)
 
 ## 其他使用问题 {#section_x04_cz8_fvl .section}
 
 -   [云安全中心检测范围说明](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心检测范围说明.md#)
 -   [云安全中心控制台提示“token校验失败”](intl.zh-CN/常见问题/常见问题隐藏目录/云安全中心控制台提示“token校验失败”.md#)
+-   [浏览器打开控制台出现兼容性问题如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/浏览器打开控制台出现兼容性问题如何处理？.md#)
 
