--- a/cn.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md
+++ b/cn.zh-CN/用户指南/网页防篡改/开启网页防篡改保护.md
@@ -10,7 +10,7 @@
 
 使用网页防篡改服务前，需确保您当前账号有足够的网页防篡改配额。您可在云安全中心控制台网页防篡改页面右上角，查看您当前的配额数、已消耗的配额数和配额有效期。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019448735_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329248735_zh-CN.png)
 
 **说明：** 
 
@@ -19,7 +19,7 @@
 
 如果配额不足，可在云安全中心控制台网页防篡改页面，单击右上角**购买配额**，在购买页面购买**防篡改授权数**。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019448733_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329248733_zh-CN.png)
 
 ## 限制条件 {#section_yxo_3zs_r87 .section}
 
@@ -39,23 +39,23 @@
 
 3.  在网页防篡改页面单击左上角**为服务器添加防护**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542140_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329242140_zh-CN.png)
 
 4.  在创建网页防篡改对话框中勾选目标服务器。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542149_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329242149_zh-CN.png)
 
     **说明：** 授权配额为0时，您将无法添加新的防护服务器。如果有无需防护的服务器，可以暂时关闭该服务器的**防护状态**。关闭防护后，将会释放出对应梳理的可用授权配额，以便您添加新的服务器。例如：关闭1台服务器的防护状态，将会释放出1个可用授权配额。
 
 5.  单击**下一步**，添加防护目录。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542149_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329242149_zh-CN.png)
 
 6.  在添加防护目录页签中，完成以下配置。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542157_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329242157_zh-CN.png)
 
-    选择防护模式。可选白名单模式和黑名单模式。白名单模式下，会对添加的防护目录和文件类型进行保护；黑名单模式下，会对防护目录下，所有未排除的子目录、文件类型、指定文件进行保护。默认开启白名单模式。
+    选择防护模式。可选白名单模式和黑名单模式。白名单模式下，会对添加的防护目录和文件类型进行保护；黑名单模式下，会对防护目录下所有未排除的子目录、文件类型、指定文件进行保护。默认开启白名单模式。
 
     -   白名单模式配置：
         -   **防护目录**：手动输入该服务器下需要开启防篡改保护的目录地址。
@@ -67,34 +67,34 @@
     -   黑名单防护模式：
         -   **防护目录**：手动输入该服务器下需要开启防篡改保护的目录地址。
         -   **排除子目录**：无需开启网页防篡改的子目录地址。手动输入，多个目录之间用半角分号隔开。输入排除子目录后，云安全中心将不会对该子目录中的文件进行防护。
-        -   **排除文件类型**：无需进行网页防篡改检测的文件格式。手动输入，多个文件类型之间用半角分号隔开。输入排除文件类型后，云安全中心将不会对该防护目录下，该类型的文件进行防护。
+        -   **排除文件类型**：无需进行网页防篡改检测的文件格式。手动输入，多个文件类型之间用半角分号隔开。输入排除文件类型后，云安全中心将不会对该防护目录下该类型的文件进行防护。
         -   **本地备份目录**：展示该目录下的默认备份存储路径。云安全中心为您指定的默认备份目录为/usr/local/aegis/bak（Linux服务器）和C:\\Program Files \(x86\)\\Alibaba\\Aegis\\bak（Windows服务器），您可手动修改默认的备份路径。
 7.  单击**开启防护**，完成添加服务器和目录的操作。
 
     添加服务器完成后，该服务器将显示在网页防篡改页面的防护服务器列表中。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548747_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329248747_zh-CN.png)
 
     **说明：** 添加服务器后，服务器的网页防篡改防护是**默认关闭**状态的。您需要在网页防篡改页面**开启**目标服务器的防护状态。
 
 8.  在防篡改防护列表中，单击目标服务器**防护状态**开关，为该服务器开启防护服务。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548754_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329248754_zh-CN.png)
 
     首次开启防护时，目标主机的服务状态将会显示为**启动中**，并显示启动进度条。请耐心等待数秒，启动成功后服务状态将会显示为**正在运行**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548755_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329248755_zh-CN.png)
 
-    **说明：** 当防护服务状态为异常时，在目标主机服务状态栏单击**异常**，显示异常状态的详细原因并单击**重试**。详见[防护异常状态处理](#)。
+    **说明：** 当防护服务状态为异常时，在目标服务器服务状态栏单击**异常**，显示异常状态的详细原因并单击**重试**。详见[防护异常状态处理](#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019542159_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329242159_zh-CN.png)
 
 
 ## 后续操作 {#section_tk1_0sl_szt .section}
 
 为服务器开启网页防篡改保护后，您可在安全告警处理页面，筛选网页防篡改类型，查看云安全中心为您检测到的网页篡改事件和告警信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155972019548739_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/141310/155983329348739_zh-CN.png)
 
 ## 防护异常状态处理 {#abnormal .section}
 
