--- a/intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md
+++ b/intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md
@@ -1,10 +1,28 @@
 # 安全告警类型概述 {#concept_l5g_fzc_zdb .concept}
 
-云安全中心支持网页防篡改、进程异常、网站后门、异常登录、恶意进程等安全告警类型，通过全面的安全告警类型帮助您实时掌握您资产的安全态势。
+云安全中心支持网页防篡改、进程异常、网站后门、异常登录、恶意进程等安全告警类型，通过全面的安全告警类型帮助您及时发现资产中的安全威胁、实时掌握您资产的安全态势。
 
 云安全中心支持对您已开启的告警防御能力提供总览，帮助您快速了解已开启和未开启的防御项目。您可在云安全中心控制台安全告警处理页面，查看已开启和未开启的防御项目。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155975580548525_zh-CN.png)
+防御项目包含以下类型。
+
+-   异常登录
+-   持久化后门
+-   异常账号
+-   网站后门
+-   异常网络连接
+-   敏感文件篡改
+-   恶意进程（云查杀）
+-   应用白名单
+-   进程异常行为
+-   网页防篡改
+-   异常事件
+-   云产品检测威胁
+-   异常网络连接
+-   应用入侵事件
+-   精准防御（病毒自动查杀）
+
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155983466948525_zh-CN.png)
 
 除应用白名单和网页防篡改告警类型以外，云安全中心默认为用户开启所有的告警事件防御能力。
 
@@ -12,9 +30,9 @@
 
 -   基础版用户默认只开启**异常登录**的防御能力。如需开通其他防御能力，需**升级**到高级版或 企业版。有关升级的相关内容，参见[服务续费与升级](../intl.zh-CN/产品定价/服务续费与升级.md#)。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155975580548526_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13637/155983466948526_zh-CN.png)
 
--   应用白名单和网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启应用白名单和网页防篡改的防御。网页防篡改为企业版功能，高级版不支持该功能。应用白名单详细操作参见[应用白名单](../intl.zh-CN/用户指南/应用白名单.md#)；网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/用户指南/网页防篡改/开通服务.md#)。
+-   应用白名单和网页防篡是云安全中心的增值服务，需要您单独购买开通后才会开启应用白名单和网页防篡改的防御。网页防篡改为高级版和企业版功能，基础版不支持该功能。应用白名单详细操作参见[应用白名单](../intl.zh-CN/用户指南/应用白名单.md#)；网页防篡改详细操作参见网页防篡改[开通服务](../intl.zh-CN/用户指南/网页防篡改/开通服务.md#)。
 -   云产品威胁检测为企业版功能，企业版自动开启防御；高级版需要升级至企业版后才能自动开启防御。
 
 **安全告警类型** 
