--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -9,8 +9,9 @@
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
--   [Agent相关FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/Agent相关FAQ.md#)
--   [安装Agent提示“Permission denied”错误](intl.zh-CN/常见问题/常见问题隐藏目录/Agent相关FAQ.md#1)
+-   [Agent一键安装失败怎么办？](intl.zh-CN/常见问题/常见问题隐藏目录/Agent一键安装失败怎么办？.md#)
+-   [在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？.md#)
+-   [如何查看云安全中心Agent的日志？](intl.zh-CN/常见问题/常见问题隐藏目录/如何查看云安全中心Agent的日志？.md#)
 -   [金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云、VPC用户安装Agent.md#)
 -   [如何在非阿里云服务器上使用云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在非阿里云服务器上使用云安全中心？.md#)
 -   [如何在镜像中安装云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在镜像中安装云安全中心？.md#)
