--- a/cn.zh-CN/用户指南/漏洞管理/应用漏洞.md
+++ b/cn.zh-CN/用户指南/漏洞管理/应用漏洞.md
@@ -4,42 +4,25 @@
 
 **说明：** 应用漏洞为企业版功能，基础版和高级版不支持。基础版和高级版用户需先升级到企业版，才可使用应用漏洞功能。
 
-## 支持检测的应用漏洞类型 {#section_k8t_bs8_12f .section}
-
-云安全中心支持检测以下类型的应用漏洞：
-
--   系统服务弱口令漏洞
-
-    包括主流的系统服务弱口令漏洞，如：MongoDB数据库服务漏洞、MySQL数据库服务漏洞、OpenSSH服务漏洞等。
-
--   系统服务漏洞
-
-    包括主流的系统服务漏洞，如：OpenSSL心脏滴血漏洞、Redis密码暴力破解漏洞等。
-
--   应用服务漏洞
-
-    包括近期爆发的主流应用服务漏洞，如：Tomcat控制台弱密码检测、Confluence 任意文件读取漏洞等。
-
-
 ## 操作步骤 {#section_2kk_69e_xva .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  定位到**漏洞修复** \> **应用漏洞**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648581_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948581_zh-CN.png)
 
 3.  您可以在应用漏洞页面查看云安全中心检测到的所有应用漏洞，查看漏洞修复建议、严重程度和状态、对特定漏洞进行定位、将漏洞加入白名单或验证漏洞等操作。
     -   **查看漏洞详情** 
 
         单击漏洞列表中的漏洞名称打开漏洞详情页面。您可在漏洞详情页面查看该漏洞的漏洞证明、安全建议等信息，并可将漏洞加入白名单等操作。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648583_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948583_zh-CN.png)
 
         在漏洞详情页面的漏洞列表中，单击漏洞**影响的资产名称**，可定位到**资产列表** \> **漏洞信息**页面，为您展示该资产中检测到的应用漏洞信息。
 
     -   **查看漏洞安全建议并进行相应的修复操作**
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648586_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948586_zh-CN.png)
 
     -   **查看漏洞的修复紧急度建议** 
 
@@ -49,7 +32,7 @@
 
         您可在应用漏洞页面通过筛选漏洞危险等级（高、中、低）、漏洞处理状态（已处理、未处理）或输入服务器IP/名称定位到相关的漏洞。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648587_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948587_zh-CN.png)
 
     -   **查看漏洞详细状态**
 
@@ -64,13 +47,13 @@
 
         您可在应用漏洞页面勾选漏洞列表左侧的复选框后，单击**加白名单**，将该漏洞加入白名单中。加入白名单后，云安全中心将不再对白名单中的应用漏洞进行告警。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648584_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948584_zh-CN.png)
 
         加入白名单的漏洞将从漏洞列表中移除，并记录在[漏洞管理设置](intl.zh-CN/用户指南/漏洞管理/漏洞管理设置与加白名单.md#)页面的**漏洞白名单配置**列表中。
 
         如需恢复云安全中心对白名单中的漏洞进行检测和告警提示，可在漏洞管理设置页面漏洞白名单列表中**移除**该漏洞。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/155973190648585_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/381861/156206133948585_zh-CN.png)
 
     -   **导出漏洞** 
 
@@ -78,4 +61,67 @@
 
         **说明：** 根据您资产中漏洞数据的大小，导出漏洞列表可能需要耗费一定时间，请耐心等待。
 
+
+## 支持检测的应用漏洞 {#section_h3z_5pw_1l9 .section}
+
+|应用漏洞类型|检测项|
+|------|---|
+|系统服务弱口令|OpenSSH 服务|
+|MySQL 数据库服务|
+|MSSQL 数据库服务|
+|MongoDB 数据库服务|
+|FTP/VSFTP/ProFTPD 服务|
+|Memcache 缓存服务|
+|Redis 缓存服务|
+|Subversion 版本控制服务|
+|SMB 文件共享服务|
+|SMTP 邮件发送服务|
+|POP3 邮件接收服务|
+|IMAP 邮件管理服务|
+|系统服务漏洞|OpenSSL 心脏滴血|
+|SMB -   Samba
+-   弱口令暴力破解
+
+ |
+|RSYNC -   匿名访问导致敏感文件信息
+-   认证密码暴力破解
+
+ |
+|VNC 密码暴力破解|
+|pcAnywhere 密码暴力破解|
+|Redis 密码暴力破解|
+|应用服务漏洞|phpMyAdmin 弱口令检测|
+|Tomcat 控制台弱密码检测|
+|Apache Struts 2 远程命令执行漏洞|
+|Apache Struts 2 远程命令执行漏洞（S2-046）|
+|Apache Struts 2 远程命令执行漏洞（S2-057）|
+|ActiveMQ CVE-2016-3088 任意文件上传漏洞|
+|Confluence 任意文件读取漏洞|
+|CouchDB Query Server 远程命令执行|
+|Discuz! 后台管理员弱口令破解|
+|Docker 未授权访问漏洞|
+|Drupal Drupalgeddon2 远程代码执行CVE-2018-7600|
+|ECshop 登录接口代码执行漏洞|
+|Elasticsearch 未授权访问|
+|Elasticsearch MvelRCE CVE-2014-31|
+|Elasticsearch Groovy RCE CVE-2015-1427|
+|泛微OA表达式注入|
+|Hadoop YARN ResourceManager 未授权访问|
+|JavaServer Faces 2 目录遍历漏洞|
+|JBoss EJBInvokerServlet Java 反序列化漏洞|
+|Jenkins Manage 匿名访问CVE-2018-1999001 CVE-2018-1999002|
+|Jenkins 未授权访问|
+|Jenkins Script Security Plugin RCE|
+|Kurbernets 未授权访问漏洞|
+|MetInfo getPassword 接口存在SQL注入漏洞|
+|MetInfo login 接口存在SQL注入漏洞|
+|PHPCMS 9.6 任意文件上传漏洞|
+|PHP-CGI 远程代码执行|
+|Actuator unauth RCE|
+|ThinkPHP\_RCE\_20190111|
+|WebLogic UDDI Explorer SSRF 漏洞|
+|WordPress xmlrpc.php 存在SSRF漏洞|
+|Zabbix Web 控制台暴力破解|
+|OpenSSL 心脏滴血检测|
+|Apache Tomcat WEB-INF 配置文件未授权访问|
 
